<resources>
    <string name="app_name">Task Manager 360</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="img_login">Login Image</string>
    <string name="new_task">New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="img_priority">Priority Image</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="cancel">Cancel</string>
    <string name="create_task">Create Task</string>
    <string name="mark_done">Mark as done</string>
    <string name="task_options">Task options</string>
    <string name="wrong_pass">Wrong password</string>
    <string name="wrong_user">Wrong user</string>
    <string name="all">All</string>
    <string name="done">Done</string>
    <string name="undone">Undone</string>
    <string name="error_on_create">Cannot create task. Check field values</string>
    <string name="urgent">Urgent</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="save_changes">Save changes</string>
</resources>
